--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "mdb-react-ui-kit": "^4.0.0",
     "mysql2": "^2.3.3",
     "nodemon": "^2.0.16",
+    "passport": "^0.6.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.4.0",
     "react-dom": "^18.2.0",
